task: Mets title generation for supplements